2010-05-06  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/DataFrame.h: DataFrame( RObject::SlotProxy ) and 
	DataFrame( RObject::AttributeProxy ) constructors

2010-05-05  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/S4.h: S4 gains a "is" method to identify if an object 
	is of a given S4 class, following Doug's advice in lme4a
	
	* inst/include/RcppCommon.h: new STL-like algorithms Rcpp::any and Rcpp::any_if
	
	* inst/include/Rcpp/Vector.h: Vector gains a constructor taking an 
	RObject::SlotProxy and a constructor taking an RObject::AttributeProxy, 
	allowing this construct NumericVector x( y.slot( "foo" ) )

2010-05-04  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/preprocessor_generated.h: new macros to hide most of 
	the boiler plate code
	
	RCPP_FUNCTION_0, ..., RCPP_FUNCTION_1
	RCPP_FUNCTION_VOID_0, ...
	RCPP_XP_METHOD_0, ...
	RCPP_XP_METHOD_CAST_0, ...
	RCPP_XP_METHOD_VOID_0, ...

2010-05-03  Dirk Eddelbuettel  <edd@dexter>

	* inst/unitTests/runit.DataFrame.R: unit tests for Rcpp::DataFrame

2010-05-03  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/exceptions.h : move the what methods of exception
	classes so that the symbol is defined for sure in the shared
	library. This seems to make a difference due to vague linkage
	issues. Decrypted from http://gcc.gnu.org/wiki/Visibility

2010-05-02  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/as.h: add throw(not_compatible) in Rcpp::as

	* inst/include/Rcpp/clone.h: the clone(SEXP) moves to the headers

2010-04-28  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Vector.h: changed Vector( size_t ) to Vector( int )
	to allow Vector( 0 ) and Vector::create()

2010-04-27  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/preprocessor.h: new macro RCPP_ENUM_TRAITS to
	generate traits needed to support wrap for an enum type (used in
	RProtoBuf)
